2015-10-21  Edward Jones  <ed.jones@embecosm.com>
	Reintroduce the GCC plugin, for feature extraction and pass gating.

	* CMakeLists.txt: Refactor, build libraries and add option to build
	plguin.
	* include/mageec/Feature.h (FeatureBase::print)
	(Feature::print): Added methods.
	* include/mageec/FeatureSet.h (FeatureSet::addFeature): rename to add.
	(FeatureSet::print): Added method.
	* include/mageec/Parameter.h (ParameterBase::print)
	(Parameter::print): Added methods.
	* include/mageec/ParameterSet.h (ParameterSet:addParameter): rename to add.
	(ParameterSet::print): Added method.
	* lib/Database.cpp (ResultIterator::operator*): Update addFeature/
	addParameter calls.

2015-10-01  Edward Jones  <ed.jones@embecosm.com>
	Added ability to train and retrieve results, updated various
	interfaces.

	* CMakeLists.txt: Define MAGEEC version macros.
	* include/mageec/Database.h (Database::newFeatureSet):
	Update feature argument.
	(Database::newParameterSet): Update parameter argument.
	(Database::trainMachineLearner): Remove return.
	(ResultIterator::ResultIterator): Remove unnecessary constructors.
	(ResultIterator::operator*): Wrap return in util::Option type.
	(ResultIterator::m_result_iter): Added private member.
	* include/mageec/Feature.h (Feature::fromBlob):
	Wrap return in std::unique_ptr, add 'name' argument.
	* include/mageec/FeatureSet.h (FeatureSet): Use std::shared_ptr
	for the features, add std::initializer_list constructor.
	* include/mageec/Framework.h: Check for version defines.
	* include/mageec/ML.h (IMachineLearner::makeDecision): Pass
	features by const reference.
	(IMachineLearner::trainMachineLearner): Rename method to 'train'.
	* include/mageec/Parameter.h (Parameter::fromBlob):
	Wrap return in std::unique_ptr, add 'name' argument.
	* include/mageec/ParameterSet.h (ParameterSet): Use std::shared_ptr
	for parameters, add std::initializer_list constructor.
	* include/mageec/TrainedML.h (TrainedML::makeDecision):