@@ -32,6 +32,7 @@
 
 #include "mageec/Decision.h"
 #include "mageec/Types.h"
+#include "mageec/Util.h"
 
 #include "sqlite3.h"
 
@@ -66,6 +67,9 @@ public:
             const IMachineLearner& ml,
             Metric metric,
             const std::vector<uint8_t> blob);
+
+  /// \brief Get the unique identifier for the underlying machine learner
+  util::UUID getUUID(void) const;
 
   /// \brief Get the name of the underlying machine learner interface
   std::string getName(void) const;
